--- a/platforms/android/res/values/themes.xml
+++ b/platforms/android/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
  <resources>
+    <color name="SplashPurple">#5765cb</color>
     <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.NoActionBar">
         <item name="android:windowBackground">@drawable/preview_window</item>
     </style>
